<resources>
    <string name="app_name">Implicit Intents</string>

    <string name="txt_url">http://developer.android.com</string>
    <string name="btn_url">Open Website</string>

    <string name="txt_location">Golden Gate Bridge</string>
    <string name="btn_location">Open Location</string>

    <string name="txt_shareText">\'Twas brillig and the slithy toves</string>
    <string name="btn_shareText">Share This Text</string>
    <string name="share_with">Share this text with:</string>
    <string name="btn_takePicture">Take a picture</string>
</resources>
