<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editText_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_url" />

    <Button
        android:id="@+id/btn_openWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:background="@color/colorPrimary"
        android:onClick="openWebsite"
        android:text="@string/btn_url"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_location" />

    <Button
        android:id="@+id/btn_openLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:background="@color/colorPrimary"
        android:onClick="openLocation"
        android:text="@string/btn_location"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_shareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_shareText" />

    <Button
        android:id="@+id/btn_shareText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:onClick="shareText"
        android:text="@string/btn_shareText"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_tagePhotograph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableTop="@drawable/ic_camera_alt_black_24dp"
        android:gravity="center_vertical"
        android:onClick="openCamera"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_takePicture"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold" />
</LinearLayout>